--- a/_config.yml
+++ b/_config.yml
@@ -7,14 +7,13 @@ first_name: Maria
 middle_name:
 last_name: Ryskina
 email: mryskina@cs.cmu.edu
-description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+description: Maria Ryskina's personal webpage @CMU SCS
 footer_text: >
   Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 url: https://www.cs.cmu.edu/
-baseurl: /~mryskina/
+baseurl: /~mryskina
 last_updated: true # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 
