--- a/_config.yml
+++ b/_config.yml
@@ -7,15 +7,14 @@ first_name: Maria
 middle_name:
 last_name: Ryskina
 email: mryskina@cs.cmu.edu
-description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+description: Maria Ryskina's personal webpage @CMU SCS
 footer_text: >
   Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
 
 #  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
 #  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
 url: https://www.cs.cmu.edu/
-baseurl: /~mryskina/
+baseurl: /~mryskina
 last_updated: true # set to true if you want to display last updated in the footer
 
 # -----------------------------------------------------------------------------
