--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: blank # the website title (if blank, full name will be used instead)
+title: Maria Ryskina # the website title (if blank, full name will be used instead)
 first_name: Maria
 middle_name:
 last_name: Ryskina
@@ -12,6 +12,7 @@ footer_text: >
   Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
+icon: empty
 url: https://www.cs.cmu.edu/
 baseurl: /~mryskina
 last_updated: true # set to true if you want to display last updated in the footer
