--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: blank # the website title (if blank, full name will be used instead)
+title: Maria Ryskina # the website title (if blank, full name will be used instead)
 first_name: Maria
 middle_name:
 last_name: Ryskina
@@ -10,9 +10,7 @@ email: mryskina@cs.cmu.edu
 description: Maria Ryskina's personal webpage @CMU SCS
 footer_text: >
   Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
-
-#  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-#  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
+icon: empty
 url: https://www.cs.cmu.edu/
 baseurl: /~mryskina
 last_updated: true # set to true if you want to display last updated in the footer
