--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,12 @@ impressum_path:  # set to path to include impressum link in the footer, use the 
 # Take a look to https://github.com/jekyll/jekyll-feed for more customization
 
 # -----------------------------------------------------------------------------
+# RSS Feed
+# -----------------------------------------------------------------------------
+# will use title and url fields
+# Take a look to https://github.com/jekyll/jekyll-feed for more customization
+
+# -----------------------------------------------------------------------------
 # Layout
 # -----------------------------------------------------------------------------
 
@@ -70,6 +76,7 @@ rss_icon: true
 contact_note: >
 #  You can even add a little note about which of these is the best way to reach you.
 semantic_scholar_id: Maria-Ryskina/1410648718
+dblp_url: # your DBLP profile url
 
 google_analytics: UA-XXXXXXXXX # out your google-analytics code
 panelbear_analytics: XXXXXXXXX # panelbear analytics site ID
@@ -88,6 +95,7 @@ panelbear_analytics: XXXXXXXXX # panelbear analytics site ID
 #
 ## Comments
 #disqus_shortname: al-folio # put your disqus shortname
+
 
 # -----------------------------------------------------------------------------
 # Collections
@@ -240,7 +248,7 @@ enable_math:                true   # enables math typesetting (uses MathJax)
 enable_tooltips:            false  # enables automatic tooltip links generated
                                    # for each section titles on pages and posts
 enable_darkmode:            true   # enables switching between light/dark modes
-enable_navbar_social:       false  # enables displaying social links in the
+enable_navbar_social:       true  # enables displaying social links in the
                                    # navbar on the about page
 enable_project_categories:  true   # enables categorization of projects into
                                    # multiple categories
