--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,12 @@ baseurl: /~mryskina
 last_updated: true # set to true if you want to display last updated in the footer
 
 # -----------------------------------------------------------------------------
+# RSS Feed
+# -----------------------------------------------------------------------------
+# will use title and url fields
+# Take a look to https://github.com/jekyll/jekyll-feed for more customization
+
+# -----------------------------------------------------------------------------
 # Layout
 # -----------------------------------------------------------------------------
 
@@ -58,6 +64,7 @@ dblp_url: # your DBLP profile url
 contact_note: >
 #  You can even add a little note about which of these is the best way to reach you.
 semantic_scholar_id: Maria-Ryskina/1410648718
+dblp_url: # your DBLP profile url
 
 google_analytics: UA-XXXXXXXXX # out your google-analytics code
 panelbear_analytics: XXXXXXXXX # panelbear analytics site ID
@@ -76,6 +83,7 @@ panelbear_analytics: XXXXXXXXX # panelbear analytics site ID
 #
 ## Comments
 #disqus_shortname: al-folio # put your disqus shortname
+
 
 # -----------------------------------------------------------------------------
 # Collections
@@ -173,7 +181,7 @@ enable_math:                true   # enables math typesetting (uses MathJax)
 enable_tooltips:            false  # enables automatic tooltip links generated
                                    # for each section titles on pages and posts
 enable_darkmode:            true   # enables switching between light/dark modes
-enable_navbar_social:       false  # enables displaying social links in the
+enable_navbar_social:       true  # enables displaying social links in the
                                    # navbar on the about page
 enable_project_categories:  true   # enables categorization of projects into
                                    # multiple categories
