--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Maria Ryskina # the website title (if blank, full name will be used instead)
+title: Maria Ryskina
 first_name: Maria
 middle_name:
 last_name: Ryskina
