Added a paper; fixed two-author comma

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -46,6 +46,8 @@
   - firstname: ["Florian", "F."]
     url: https://www.cs.cmu.edu/~fmetze/interACT/Home.html
 
-
+"Knight":
+  - firstname: ["Kevin", "K."]
+    url: https://kevincrawfordknight.github.io/
 
 
