Add shared task paper

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -50,4 +50,8 @@
   - firstname: ["Kevin", "K."]
     url: https://kevincrawfordknight.github.io/
 
+"Pimentel":
+  - firstname: ["Tiago", "T."]
+    url: https://tpimentelms.github.io/
+
 
