Updated co-author websites

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -24,7 +24,7 @@
     
 "Tsvetkov":
   - firstname: ["Yulia", "Y."]
-    url: http://www.cs.cmu.edu/~ytsvetko/
+    url: https://homes.cs.washington.edu/~yuliats/
     
 "Black":
   - firstname: ["Alan", "A.", "Alan W", "Alan W.", "A. W", "A. W."]
@@ -36,7 +36,7 @@
     
 "Alpert-Abrams":
   - firstname: ["Hannah", "H."]
-    url: https://www.halperta.com/
+    url: http://halperta.com/
     
 "Garrette":
   - firstname: ["Dan", "D."]
