--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -58,4 +58,6 @@
   - firstname: ["Ajay", "A."]
     url: https://sites.google.com/site/ajaynagesh/home
 
-
+"Batsuren":
+  - firstname: ["Khuyagbaatar"]
+    url: https://kbatsuren.github.io/
