--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -61,3 +61,7 @@
 "Batsuren":
   - firstname: ["Khuyagbaatar"]
     url: https://kbatsuren.github.io/
+
+"Hupkes":
+  - firstname: ["Dieuwke"]
+    url: https://dieuwkehupkes.nl/
