--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ footer_text: >
   Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: empty
+icon: 🐁
 url: ryskina.github.io
 baseurl:
 last_updated: true # set to true if you want to display last updated in the footer
