Home page updates

--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,14 @@ title: Maria Ryskina
 first_name: Maria
 middle_name:
 last_name: Ryskina
+pronouns: she/they
 email: mryskina@cs.cmu.edu
 description: Maria Ryskina's personal webpage
 footer_text: >
   Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: 🐁
+icon: 🎓
 url: ryskina.github.io
 baseurl:
 last_updated: true # set to true if you want to display last updated in the footer
