--- a/_config.yml
+++ b/_config.yml
@@ -77,6 +77,7 @@ rss_icon:
 contact_note: >
 #  You can even add a little note about which of these is the best way to reach you.
 semantic_scholar_id: Maria-Ryskina/1410648718
+mastodon_url: https://sigmoid.social/@mryskina
 dblp_url: # your DBLP profile url
 
 google_analytics: UA-XXXXXXXXX # out your google-analytics code
