--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@ pronouns: she/they
 email: ryskina@mit.edu
 description: Maria Ryskina's personal webpage
 footer_text: >
-  Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
+  Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme. Favicon by <a href="https://twemoji.twitter.com/">Twemoji</a>.
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: 🐁
+icon: 1f401.svg
 url: ryskina.github.io
 baseurl:
 last_updated: true # set to true if you want to display last updated in the footer
